--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,13 @@
     @apply text-inherit
   }
   .btn{
-    @apply flex-center gap-2 font-semibold text-base
+    @apply flex-center gap-2 font-semibold text-sm
   }
   .btn-primary{
     @apply bg-primary text-white btn hover:brightness-75
   }
   .inputs{
-    @apply border bg-secondary focus:ring-[3px] ring-primary/70 ring-offset-2 px-4 h-12 rounded-xl font-medium text-sm
+    @apply border bg-secondary focus:ring-[2.5px] ring-primary/50 ring-offset-2 px-4 h-12 rounded-xl font-medium text-sm
   }
   main{
     @apply max-w-[90%] md:max-w-[768px] mx-auto
